# SF_DS_COURSE

./: README.md  game_V2.py  usefullFunctions.ipynb  Установка библиотек через pip.ipynb
Attestations/: EDA_att.ipynb  MATH&ML_att.ipynb  ML_att.ipynb
Bibles/: Установка библиотек через pip.ipynb
FirstYearProject/: .gitignore
FirstYearProject/1st_year_project/: .gitignore  1.ipynb  data_temp.csv  requirements.txt  states  zipcode
Math_ML-4/: Math-ML-4.ipynb
Project_0/: Baseline.ipynb  README.md  game_V3.py  pyproject.toml  test.py
Project_1/: Project-1._Ноутбук-шаблон.ipynb  README.md  pyproject.toml
Project_1/graphs/: zp_and_mobility.html  zp_from_age_and_education.html  zp_from_car_and_mobility.html
Project_2/: Project_2.ipynb  Project_2_Ноутбук_шаблон.ipynb  README.md  pyproject.toml
Project_2/graphs/: ZP_from_exp_and_city.html
Project_3/: EDA_Project_3_model.ipynb  Project_3-dataCleaning.ipynb  README.md  pyproject.toml
Project_3/graphs/: day_of_week_reviews  rating_distrbution
Project_4/: Project_4_ML.ipynb  readme.md  test.ipynb
Project_5/: .gitignore  Project-5._Ноутбук-шаблон.ipynb  Project_5.ipynb  readme.md
Project_6/: Project-6._Ноутбук-шаблон.ipynb  README.md
Studies/DIS-MATH-1/: DIS-MATH-1.1.ipynb
Studies/DIS-MATH-2/: DIS-MATH-2.2.ipynb  DIS-MATH-2.3.ipynb
Studies/DIS-MATH-3/: DIS-MATH-3.1_and_3.2.ipynb  DIS-MATH-3.3.ipynb
Studies/DS_PROD-1/: .gitignore  DS_PROD-1.ipynb  model.onnx  my_new_pipeline.pkl  my_pipeline.pkl  pipeline.pmml
Studies/DS_PROD-2/: .gitignore  DS_PROD-2.ipynb
Studies/DS_PROD-4/: DS_PROD-4.ipynb  DS_PROD-4_practice.ipynb
Studies/EDA-1/: EDA-1.ipynb  unit_7_check_up.ipynb
Studies/EDA-2/: EDA-2.ipynb  EDA-2_modeldata.ipynb  EDA-2_winedata.ipynb
Studies/EDA-3/: EDA-3.ipynb  EDA-3_collinearity.ipynb  EDA-3_date-time.ipynb  EDA-3_date-time_and_categorial.ipynb  EDA-3_flag-transform.ipynb  EDA-3_practice.ipynb
Studies/EDA-4/: EDA-4.ipynb  EDA-4_practice.ipynb
Studies/EDA-5/: EDA-5.ipynb  get_logger.py  logger_EDA-4_noshow_appointments.ipynb  noshowappointments_cometml.ipynb
Studies/Github and markdown/: example.md
Studies/ML-2/: ML-2.ipynb  (+2 more)
Библиотеки/: Bibles for Linux Ubuntu.ipynb  NLTK.ipynb  Установка библиотек через pip.ipynb
(+112 files in other folders)
