[tool.poetry]
name = "project-0"
version = "0.0.1"
description = "Игра \"Угадай число\""
authors = ["Your Name <you@example.com>"]
license = "None"
readme = "README.md"
packages = [{include = "project_0"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
