[tool.poetry]
name = "project-0"
version = "0.1.0"
description = "Требования для запуска игры \"Угадай номер\""
authors = ["Elancinos <telischev.evgeny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
