[tool.poetry]
name = "project-1-datacleaninghhru"
version = "0.1.0"
description = "Data cleaning project in python."
authors = ["Elancinos <telischev.evgeny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
