[tool.poetry]
name = "project-3-eda-and-feature-engineering"
version = "0.1.0"
description = ""
authors = ["Elancinos <telischev.evgeny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
category-encoders = "^2.6.4"
plotly = "^5.24.1"
numpy = "^2.1.3"
nltk = "^3.9.1"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
